# Building-Natural-Language-Pipelines

./: .gitignore  =0.5.1  README.md  justfile  mistral-7b-v1.0.yaml  pyproject.toml  repo_structure.txt  requirements.txt  requirements_colab.txt
ch1/: README.md  (+3 more)
ch4/: README.md  pyproject.toml
ch4/jupyter-notebooks/: async_hybrid_pipeline.ipynb  bytewax-sample.ipynb  bytewax.ipynb  evaluate_pipelines.ipynb  example.txt  extraction-and-processing-pipelines.ipynb  hybrid_pipeline.ipynb  indexing-pipelines.ipynb  indexing_pipeline.ipynb  pipelines-with-routing.ipynb  retriever-pipelines-with-llm.ipynb  routing_pipeline.ipynb  semantic_search_pipeline.ipynb  supercomponents_and_agentic_rag.ipynb
ch4/jupyter-notebooks/data_for_indexing/: haystack_intro.txt  llm_models.csv
ch4/jupyter-notebooks/markdown_pages/: page1.md  page2.md  page3.md
ch4/jupyter-notebooks/multimodal/: 1_image_embeddings_with_clip.ipynb  2_multimodal_indexing_clip.ipynb  3_multimodal_indexing_llm.ipynb  4_multimodal_rag_vision_llm.ipynb  5_audio_transcription_whisper.ipynb
ch4/jupyter-notebooks/routers/: conditional_router.ipynb  metadata_router.ipynb  text_language_router.ipynb
ch4/jupyter-notebooks/scripts/: documentsanitizer.py  dummy_data.py  indexing.py  knowledgegraph.py  synthetictest.py
ch4/jupyter-notebooks/textfile-pages/: page1.txt  page2.txt  page3.txt
ch4/multimodal/: multimodal_pipelines.ipynb
ch4/scripts/: indexing_pipeline.py
ch6/: .env.elasticsearch  README.md  REFACTORING_SUMMARY.md  chapter_overview.md  docker-compose.yml  indexingpipeline.py  justfile  pyproject.toml  querypipeline.py  rag_evaluation_with_ragas.ipynb
ch6/adding-evaluation/: query_pipeline.py
ch6/adding-observability/: indexing_pipeline.py  query_pipeline.py
ch6/bonus-build-from-tutorials/: rag-tutorials.ipynb
ch6/case-I-q-and-a-dataset/: indexingpipeline.py  querypipeline.py
ch6/case-II-q-and-a-complex/: rag-tutorials.ipynb
ch6/data_for_eval/: synthetic_tests_10_from_pdf.csv  synthetic_tests_10_from_web.csv  synthetic_tests_5_from_pdf.csv  synthetic_tests_advanced_branching.csv
ch6/feedback-loop-guardrails/: query_pipeline.py
ch6/jupyter-notebooks/: 1wandb.ipynb  add_observability_with_wandb.ipynb  detailed_results_naive-rag-baseline.csv  get_started_rag_evaluation_with_ragas.ipynb  hybrid_v_naive_results.md  rag_evaluation_as_custom_components.ipynb  rag_evaluation_custom.ipynb  rag_evaluation_with_ragas.ipynb  rag_evaluation_with_wandb.ipynb  ragas_evaluation_with_custom_components.ipynb  standalone_synthetic_data_generation.ipynb  wandb.ipynb
ch6/jupyter-notebooks/data_for_eval/: synthetic_tests_advanced_branching_10.csv  synthetic_tests_advanced_branching_2.csv  synthetic_tests_advanced_branching_3.csv  synthetic_tests_advanced_branching_50.csv  synthetic_tests_large_embedding_10.csv  synthetic_tests_small_embedding_10.csv
ch6/jupyter-notebooks/data_for_indexing/: llm_models.csv  synthetic_tests_advanced_branching_50.csv
ch6/jupyter-notebooks/scripts/: README.md  elasticsearch_config.py  ragasevaluation.py
ch6/requirements/: lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.8.txt  lib-py3.9.txt
ch6/scripts/: dummy_data.py  elasticsearch_config.py  hybridrag.py  indexing.py  naiverag.py  sdg_html.py  sdg_html_pdf.py  sdg_pdf.py  synthetic_test_components.py  test_rag.py  validate_elasticsearch.py
ch6/tests/: README.md  test_knowledge_graph_component.py  test_rag_analytics.py  test_rag_supercomponents.py  test_ragas_evaluation_components.py  test_synthetic_test_components.py  test_warmup_components.py
ch7-hayhooks/: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  serializing_pipelines.md
ch7-hayhooks/pipelines/: indexing_pipeline_serialization.py  rag_pipeline_serialization.py
ch7-hayhooks/pipelines/hybrid_rag/: pipeline_wrapper.py  rag.yml
ch7-hayhooks/pipelines/indexing/: indexing.yml  pipeline_wrapper.py
ch7-hayhooks/scripts/: generate_password.sh  test_secured_api.sh
ch8/: .env.example  README.md  ner-with-haystack.ipynb  pyproject.toml
ch8/chatbot-real-time/: README.md  agent.py  chatbot.py  dataflow.py  experiment_chat.ipynb  main.py
ch8/chatbot-virtual-assistant/: app.py  chatbot.ipynb  indexing-diagram.drawio  indexing_pipeline.py  pipelines.drawio  rag-pipeline-diagram.drawio  rag_pipeline.py
ch8/chatbot-virtual-assistant/.chainlit/: config.toml
ch8/chatbot-virtual-assistant/diagrams/: agentic-rag.drawio  indexing-diagram.drawio  rag-pipeline-diagram.drawio
ch8/haystack-agents/: tool-calling.ipynb
ch8/haystack-agents-mini-project/: build_pipelines.sh
ch8/langgraph-agents/: 01_langgraph-state.ipynb  langgraph-agents.ipynb
ch8/named-entity-recognition/: README.md  ner-from-web.py  ner-with-haystack-news.ipynb  ner-with-haystack-search-pipeline.ipynb
ch8/text-classification/: README.md  classification-with-haystack-search-pipeline.ipynb  sentiment_analysis.ipynb  text-classification.ipynb
ch8/text-classification/haystack-agents-mini-project/: HINTS.md  README.md  classification-ner-agent-exercise.ipynb
ch8/yelp-navigator/: IMPLEMENTATION_GUIDE.md  PIPELINE_SETUP.md  README.md  TROUBLESHOOTING.md  build_all_pipelines.sh  haystack_agent_with_tools.ipynb  haystack_looping_supervisor.ipynb  haystack_multiagent_supervisor.ipynb  langgraph-yelp-multi-agent.md  langgraph_multiagent_supervisor.ipynb  pipeline1_business_search_ner.ipynb  pipeline2_business_details.ipynb  pipeline2_business_details.yaml  pipeline3_reviews_sentiment.ipynb  pipeline4_summary_recommendations.ipynb  pipeline_chaining_guide.ipynb  start_hayhooks.sh  start_hayhooks_mcp.sh  test_multi_location.py  yelp-navigator-hayhooks-guide.md
ch8/yelp-navigator/docs/: TROUBLESHOOTING.md  langgraph-yelp-multi-agent.md  yelp-navigator-hayhooks-guide.md
ch8/yelp-navigator/haystack_helpers/: __init__.py  components.py  state.py
ch8/yelp-navigator/langgraph_helpers/: __init__.py  agents.py  nodes.py  tools.py
ch8/yelp-navigator/pipelines/: __init__.py  pipeline5_interactive_clarification.ipynb
(+283 files in other folders)
